// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render Page with default props 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`should render Page with header 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </button>
      <div
        class="side"
      >
        <a
          href="#"
        >
          Link1
        </a>
        <a
          href="#"
        >
          Link2
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`should render Page with profile 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="menuButtonWrapper"
        >
          <button
            type="button"
          >
            <img
              alt="Profile"
              src="/src/assets/images/avatar.svg"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      Content
    </div>
  </div>
</div>
`;
